fixed menu div height to look more like a collapsed side nav

--- a/hobbyhop/src/Styles/SideNav.css
+++ b/hobbyhop/src/Styles/SideNav.css
@@ -84,4 +84,6 @@ a:visited {
     padding-top: 15px;
     cursor: pointer;
     background-color: lightgray;
+    height: 80vh;
+    border-right: 2px solid gray;
 }
